complete realse version pre revuew version

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
 
     <string name="action_settings">Settings</string>
     <string name="title_activity_expert_details">ExpertDetails</string>
-    <string name="host">http://xpertouch.pe.hu/ver1.1</string>
+    <string name="host">http://1clickaway.in/ver1.1</string>
 
 
 
